--- a/index.html
+++ b/index.html
@@ -3,29 +3,57 @@
 
 <head>
 
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Character Sheet</title>
-    <link rel="stylesheet" href="styles.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Caudex:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
-    <script src="../jquery-3.7.1.js"></script>
-    <!-- CDN location for jQuery <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script> --> 
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Character Sheet</title>
+
+  <link rel="stylesheet" href="styles.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Caudex:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
+  <script src="../jquery-3.7.1.js"></script>
+  <!-- CDN location for jQuery <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script> --> 
     
 </head>
 
 
 <body>
-    <h1>The Title</h1>
 
-    <div class="character_sheet">
-        <div class="large_circle">
-            
+  <header>
+    <nav>
+      <ul>
+        <li>Vault</li>
+        <li>Emporium</li>
+        <li>Premium</li>
+        <li>Account</li>
+      </ul>
+    </nav>
+  </header>
+
+  <main>
+    <div id="characterSheet">
+      <div id="outerCircle">
+        <div id="bonusCircle">
+          <div id="abilityCircle">
+            <div id="nameCircle">
+              <h2>Name:</h2>
+            </div>
+          </div>     
         </div>
+      </div>
     </div>
 
     <script src="http://127.0.0.1:5500/CharacterSheet/scripts.js"></script>
+  </main>
+
+  <footer>
+    <ul>
+      <li>Contact</li>
+      <li>Github</li>
+      <li>Feedback</li>
+      <li>Donate</li>
+    </ul>
+  </footer>
 
 </body>
 
