Refined styles, added more ideas.

--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
         <div id="bonusCircle" class="concCircle">
           <div id="abilityCircle" class="concCircle">
             <div id="nameCircle" class="concCircle">
-              <h2 id="characterNamePrompter">Character Name:</h2>
+              <h2 id="characterNamePrompter">Enter Name:</h2>
               <form id="characterNameForm" action="/submit-name" method="post">
-                <input id="characterNameInpuuter" type="text" name="name" placeholder="choose a name for your character" required>
+                <input id="characterNameInputter" type="text" name="name" placeholder="Tavish McRadish" required>
                 <input id="characterNameSubmitter" type="submit" value="Submit">
             </div>
           </div>     
